add latest tag to CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: quay.io/bgruening/cellxgene-vip:${{ github.event.release.tag_name }}
-
-
+          tags: |
+            quay.io/bgruening/cellxgene-vip:${{ github.event.release.tag_name }}
+            quay.io/bgruening/cellxgene-vip:latest
